# cub-coin

./: Cargo.toml  README.md  pytest.ini  requirements.txt  setup.py  whitepaper.md
src/: block_structure_poc.rs  client.py  main.rs  miner.py  miner.rs  node.py  p2p_messenger.py  server.py  tests.rs
src/block_structure/: __init__.py  block_structure.py  mod.rs
src/blockchain/: __init__.py
src/p2pmessenger/: __init__.py
tests/: test_adding_new_blocks.py  test_block.py  utils.py
whitepaper/: event.py  node.py  whitepaper_implementation.py
