[package]
name = "chief_coin"
version = "0.1.0"
authors = ["Ethan Burrell <30448729+ethanburrell@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#serde = "1.0.104"
serde = { version = "1.0.104", features = ["derive"] }
#serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.8.0"
generic-array = "0.13.2"
rust-crypto = "0.2.36"
throw = "0.1.7"
rocket = "0.4.2"
